--- a/Black/b-index.html
+++ b/Black/b-index.html
@@ -15,17 +15,12 @@
 </head>
 
 <body>
-  <h1> Maryam Hafiz - GRA 424 </h1>
-  <p>Project 1</p>
+  <h1> Maryam Hafiz - Project 1 - Black On White </h1>
   <ul>
-    <li>
-      <a href="./Black/b-index.html">Black On White</a>
-    </li>
-    <li>
-      <a href="./White/w-index.html">White On Black</a>
-    </li>
+    <!-- <li><a href="/blackon" title="Black on White" ></a></li> -->
   </ul>
   <script src="js/scripts.js"></script>
 
 </body>
+
 </html>
