--- a/White/w-index.html
+++ b/White/w-index.html
@@ -15,10 +15,8 @@
 </head>
 
 <body>
-  <h1> Maryam Hafiz - GRA 424 </h1>
-  <ul>
-    <li><a href="/blackon" title="Black on White" ></a></li>
-  </ul>
+  <h1> Maryam Hafiz - Project 1 - White On Black </h1>
+  <p> White on Black</p>
   <script src="js/scripts.js"></script>
 
 </body>
