--- a/Black/b-index.html
+++ b/Black/b-index.html
@@ -16,9 +16,18 @@
 
 <body>
   <h1> Maryam Hafiz - Project 1 - Black On White </h1>
-  <ul>
-    <!-- <li><a href="/blackon" title="Black on White" ></a></li> -->
-  </ul>
+ 
+  <div>
+    <div class="container"> 
+      <div class="square1">
+        <div class="square2">
+          <div class="square3">
+    </div>
+      </div>
+        </div>
+          </div>
+
+  </div>
   <script src="js/scripts.js"></script>
 
 </body>
