Black line changes

--- a/White/w-index.html
+++ b/White/w-index.html
@@ -15,8 +15,17 @@
 </head>
 
 <body>
-  <h1> Maryam Hafiz - Project 1 - White On Black </h1>
-  <p> White on Black</p>
+
+  <div>
+    <div class= "container2"> 
+      <div class="squ1">
+        <div class="squ2">
+          <div class="squ3">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
   <script src="js/scripts.js"></script>
 
 </body>
