--- a/line1/l-index.html
+++ b/line1/l-index.html
@@ -15,16 +15,27 @@
 </head>
 
 <body>
-  <h1> Maryam Hafiz - GRA 424 </h1>
-  <p>Project 1</p>
-  <ul>
-    <li>
-      <a href="./Black/b-index.html">Black On White</a>
-    </li>
-    <li>
-      <a href="./White/w-index.html">White On Black</a>
-    </li>
-  </ul>
+  
+  <div class="container3">
+    <div class="squa">
+      <div class="lines">
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+      </div>
+     
+    </div>
+  </div>
+  
   <script src="js/scripts.js"></script>
 
 </body>
