--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
      <p>Line Interaction</p>
      <ul>
       <li>
-     <a href="line1.html">Part 1</a>
+     <a href="./line1/l-index.html">Part 1</a>
       </li>
      </ul>
      
