--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 
-</head>
+<header>
+  <div class="top">
+
+  </div>
+</header>
 
 <body>
   <h1> Maryam Hafiz - GRA 424 </h1>
@@ -28,8 +32,11 @@
      <p>Line Interaction</p>
      <ul>
       <li>
-     <a href="./line1/l-index.html">Part 1</a>
+     <a href="./line1/l-index.html">Line interaction</a>
       </li>
+      <li>
+        <a href="./line2/l2-index.html">Line interaction</a>
+         </li>
      </ul>
      
   <script src="js/scripts.js"></script>
