--- a/line2/l2-index.html
+++ b/line2/l2-index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-  
   <div class="container3">
     <div class="squa">
       <div class="lines">
@@ -32,10 +31,18 @@
         <div class="line"></div>
         <div class="linerigh"></div>
       </div>
-     
+      <div class="sub-square">
+        <div class="white1"></div>
+        <div class="white2"></div>
+        <div class="white3"></div>
+        <div class="white4"></div>
+        <div class="white5"></div>
+        <div class="white6"></div>
+      </div>
+
     </div>
   </div>
-  
+     
   <script src="js/scripts.js"></script>
 
 </body>
