--- a/index.html
+++ b/index.html
@@ -29,13 +29,12 @@
       <a href="./White/w-index.html">White On Black</a>
     </li>
      </ul>
-     <p>Line Interaction</p>
      <ul>
       <li>
-     <a href="./line1/l-index.html">Line interaction</a>
+     <a href="./line1/l-index.html">Line interaction 1</a>
       </li>
       <li>
-        <a href="./line2/l2-index.html">Line interaction</a>
+        <a href="./line2/l2-index.html">Line interaction 2</a>
          </li>
      </ul>
      
