--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
          <li>
           <a href="./line3/l3-index.html">Line interaction 3</a>
            </li>
+           <li>
+            <a href="./line4/l4-index.html">Line interaction 4</a>
+             </li>
      </ul>
      
   <script src="js/scripts.js"></script>
