--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
   <link rel="stylesheet" href="css/styles.css">
 
 <header>
-  <div class="top">
-
-  </div>
+  <h1>Maryam Hafiz</h1>
+  <h2>GRA 424 Advanced Media Projects</h2>
 </header>
 
 <body>
