--- a/lline3/l3-index.html
+++ b/lline3/l3-index.html
@@ -56,6 +56,9 @@
         <div class="lines-sub10"></div>
         <div class="lines-sub11"></div>
         <div class="lines-sub12"></div>
+        <div class="lines-sub13"></div>
+        <div class="lines-sub14"></div>
+        <div class="lines-sub15"></div>
       </div>
     </div>
   </div>
