--- a/line4/l4-index.html
+++ b/line4/l4-index.html
@@ -19,24 +19,57 @@
 </header>
 
 <body>
-  <h1> Maryam Hafiz - GRA 424 </h1>
-  <p>Project 1</p>
-  <ul>
-    <li>
-      <a href="./Black/b-index.html">Black On White</a>
-    </li>
-    <li>
-      <a href="./White/w-index.html">White On Black</a>
-    </li>
-     </ul>
-     <ul>
-      <li>
-     <a href="./line1/l-index.html">Line interaction 1</a>
-      </li>
-      <li>
-        <a href="./line2/l2-index.html">Line interaction 2</a>
-         </li>
-     </ul>
+  <div class="container4">
+    <div class="squa">
+      <div class="lines">
+        <div class="linelef"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="line"></div>
+        <div class="linerigh"></div>
+      </div>
+      <div class="sm-sq"> 
+        <div class="white1"></div>
+        <div class="white2"></div>
+        <div class="white3"></div>
+        <div class="white4"></div>
+        <div class="white5"></div>
+        <div class="white6"></div>
+      </div>
+      <div class="sub-1-box">
+        <div class="lines-sub1"></div>
+        <div class="lines-sub2"></div>
+        <div class="lines-sub3"></div>
+        <div class="lines-sub4"></div>
+        <div class="lines-sub5"></div>
+        <div class="lines-sub6"></div>
+        <div class="lines-sub7"></div>
+        <div class="lines-sub8"></div>
+        <div class="lines-sub9"></div>
+        <div class="lines-sub10"></div>
+        <div class="lines-sub11"></div>
+        <div class="lines-sub12"></div>
+        <div class="lines-sub13"></div>
+        <div class="lines-sub14"></div>
+        <div class="lines-sub15"></div>
+        <div class="addition-square">
+          <div class="white-one-left2"></div>
+          <div class="white-one2"></div>
+          <div class="white-one2"></div>
+          <div class="white-one2"></div>
+          <div class="white-one2"></div>
+          <div class="white-one-right2"></div>
+        </div>
+      </div>
+    </div>
+  </div>
      
   <script src="js/scripts.js"></script>
 
