--- a/Transparency3/tr3-index.html
+++ b/Transparency3/tr3-index.html
@@ -12,26 +12,23 @@
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/styles.css">
 
-</head>
+<header>
 
+</header>
 
 <body>
-
-  
- <header class="box"> </header>
-  <div>
-    <div class="container"> 
-      <div class="square1">
-        <div class="square2">
-          <div class="square3">
-    </div>
+ 
+  <div class="container">
+    <div class="outersquare">
+      <div class="middlesquare"></div>
+      <div class="inner-square">
+        <div class="top-left-square"></div>
+        <div class="bottom-right-square"></div>
       </div>
-        </div>
-          </div>
-  </div>
-
+    </div>    
+  </div>  
+     
   <script src="js/scripts.js"></script>
 
 </body>
-
 </html>
